--- a/index.html
+++ b/index.html
@@ -952,14 +952,14 @@
                     <div class="carousel-track" :style="`transform: translateX(-${currentSlide * 100}%)`">
                         <!-- Replace these URLs with your actual image URLs -->
                         <div class="carousel-slide">
-                            <img src="Dashboard.jpg" alt="AI Analytics Dashboard" loading="lazy">
+                            <img src="static/images/Dashboard.jpg" alt="AI Analytics Dashboard" loading="lazy">
                             <div class="slide-overlay">
                                 <h3>AI Analytics Dashboard</h3>
                                 <p>Real-time data visualization and insights</p>
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <img src="dashboard th (1).jpg" alt="Business Intelligence Reports" loading="lazy">
+                            <img src="static/images/dashboard th (1).jpg" alt="Business Intelligence Reports" loading="lazy">
                             <div class="slide-overlay">
                                 <h3>Smart Business Reports</h3>
                                 <p>Automated report generation and analysis</p>
