--- a/index.html
+++ b/index.html
@@ -353,66 +353,334 @@
             z-index: 1;
         }
 
-        /* Analysis Tabs with Background Images */
+        /* Analysis Tabs - Smaller Purple Cards in One Row */
         .analysis-tabs {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
             margin-bottom: 40px;
         }
 
         .tab-card {
             background: white;
-            border-radius: 20px;
-            padding: 30px;
+            border-radius: 18px;
+            padding: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
             border: 2px solid transparent;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
             position: relative;
             overflow: hidden;
-            min-height: 280px;
+            min-height: 200px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
         }
 
-        /* Background Images for Each Tab */
+        /* Purple Background Images for Each Tab */
         .tab-card:nth-child(1) {
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.9), rgba(118, 75, 162, 0.9)), 
-                        url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?w=500&h=300&fit=crop&crop=center') center/cover;
+            background: linear-gradient(135deg, rgba(138, 43, 226, 0.9), rgba(75, 0, 130, 0.9)), 
+                        url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?w=400&h=250&fit=crop&crop=center') center/cover;
         }
 
         .tab-card:nth-child(2) {
-            background: linear-gradient(135deg, rgba(76, 175, 80, 0.9), rgba(67, 160, 71, 0.9)), 
-                        url('https://images.unsplash.com/photo-1509909756405-be0199881695?w=500&h=300&fit=crop&crop=center') center/cover;
+            background: linear-gradient(135deg, rgba(147, 51, 234, 0.9), rgba(109, 40, 217, 0.9)), 
+                        url('https://images.unsplash.com/photo-1509909756405-be0199881695?w=400&h=250&fit=crop&crop=center') center/cover;
         }
 
         .tab-card:nth-child(3) {
-            background: linear-gradient(135deg, rgba(255, 152, 0, 0.9), rgba(255, 193, 7, 0.9)), 
-                        url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=500&h=300&fit=crop&crop=center') center/cover;
+            background: linear-gradient(135deg, rgba(126, 34, 206, 0.9), rgba(88, 28, 135, 0.9)), 
+                        url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=400&h=250&fit=crop&crop=center') center/cover;
         }
 
         .tab-card:nth-child(4) {
-            background: linear-gradient(135deg, rgba(233, 30, 99, 0.9), rgba(156, 39, 176, 0.9)), 
-                        url('https://images.unsplash.com/photo-1586953208448-b95a79798f07?w=500&h=300&fit=crop&crop=center') center/cover;
+            background: linear-gradient(135deg, rgba(139, 69, 19, 0.9), rgba(160, 32, 240, 0.9)), 
+                        url('https://images.unsplash.com/photo-1586953208448-b95a79798f07?w=400&h=250&fit=crop&crop=center') center/cover;
         }
 
-        /* Simplified tab card animations - reduce GPU load */
+        /* Enhanced Tab Icons - Smaller */
+        .tab-icon {
+            font-size: 2rem;
+            margin-bottom: 15px;
+            display: block;
+            color: white;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            position: relative;
+            z-index: 2;
+            background: rgba(255, 255, 255, 0.2);
+            width: 60px;
+            height: 60px;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 15px;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .tab-title {
+            font-size: 1.1rem;
+            font-weight: 700;
+            margin-bottom: 8px;
+            color: white;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            position: relative;
+            z-index: 2;
+            text-align: center;
+        }
+
+        .tab-description {
+            font-size: 0.8rem;
+            line-height: 1.4;
+            color: rgba(255, 255, 255, 0.95);
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+            position: relative;
+            z-index: 2;
+            text-align: center;
+        }
+
+        /* Sophisticated Chat Interface with Background */
+        .chat-interface {
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(248, 250, 252, 0.95)), 
+                        url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=800&h=600&fit=crop&crop=center') center/cover;
+            border-radius: 25px;
+            padding: 0;
+            margin-top: 30px;
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            overflow: hidden;
+            position: relative;
+        }
+
+        .chat-interface::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="20" cy="20" r="1" fill="rgba(138,43,226,0.1)"/><circle cx="80" cy="30" r="0.5" fill="rgba(147,51,234,0.1)"/><circle cx="50" cy="60" r="1.5" fill="rgba(126,34,206,0.1)"/><circle cx="10" cy="80" r="1" fill="rgba(138,43,226,0.1)"/><circle cx="90" cy="70" r="0.8" fill="rgba(147,51,234,0.1)"/></svg>');
+            background-size: 200px 200px;
+            animation: float 25s ease-in-out infinite;
+            opacity: 0.3;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .chat-header {
+            background: linear-gradient(135deg, rgba(138, 43, 226, 0.95), rgba(75, 0, 130, 0.95)), 
+                        url('https://images.unsplash.com/photo-1518186233392-c232efbf2373?w=800&h=200&fit=crop&crop=center') center/cover;
+            color: white;
+            padding: 25px 30px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            position: relative;
+            z-index: 2;
+        }
+
+        .chat-header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path d="M20,20 Q30,10 40,20 T60,20" stroke="rgba(255,255,255,0.1)" stroke-width="0.5" fill="none"/><path d="M10,50 Q20,40 30,50 T50,50" stroke="rgba(255,255,255,0.1)" stroke-width="0.5" fill="none"/><path d="M60,70 Q70,60 80,70 T100,70" stroke="rgba(255,255,255,0.1)" stroke-width="0.5" fill="none"/></svg>');
+            background-size: 150px 150px;
+            animation: float 30s ease-in-out infinite reverse;
+            opacity: 0.4;
+            pointer-events: none;
+        }
+
+        .chat-header-icon {
+            width: 60px;
+            height: 60px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            backdrop-filter: blur(15px);
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            position: relative;
+            z-index: 3;
+        }
+
+        .chat-header-text {
+            position: relative;
+            z-index: 3;
+        }
+
+        .chat-header-text h3 {
+            margin: 0;
+            font-size: 1.5rem;
+            font-weight: 700;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .chat-header-text p {
+            margin: 8px 0 0 0;
+            opacity: 0.9;
+            font-size: 1rem;
+            text-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .chat-body {
+            padding: 35px;
+            position: relative;
+            z-index: 2;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(20px);
+        }
+
+        .chat-input-container {
+            position: relative;
+            margin-bottom: 25px;
+        }
+
+        .chat-textarea {
+            width: 100%;
+            min-height: 120px;
+            border: 2px solid rgba(138, 43, 226, 0.2);
+            border-radius: 20px;
+            padding: 25px;
+            font-size: 16px;
+            resize: vertical;
+            transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            position: relative;
+            box-shadow: 0 5px 20px rgba(138, 43, 226, 0.1);
+        }
+
+        .chat-textarea:focus {
+            outline: none;
+            border-color: rgba(138, 43, 226, 0.5);
+            background: rgba(255, 255, 255, 0.95);
+            box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .chat-textarea-label {
+            position: absolute;
+            top: -12px;
+            left: 20px;
+            background: linear-gradient(135deg, #8a2be2, #4b0082);
+            color: white;
+            padding: 8px 15px;
+            font-weight: 600;
+            font-size: 0.9rem;
+            border-radius: 20px;
+            box-shadow: 0 3px 10px rgba(138, 43, 226, 0.3);
+        }
+
+        .suggestion-chip {
+            background: linear-gradient(135deg, rgba(138, 43, 226, 0.1), rgba(75, 0, 130, 0.1));
+            border: 2px solid rgba(138, 43, 226, 0.2);
+            padding: 10px 18px;
+            border-radius: 25px;
+            font-size: 0.9rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            color: #8a2be2;
+            font-weight: 500;
+        }
+
+        .suggestion-chip:hover {
+            background: linear-gradient(135deg, #8a2be2, #4b0082);
+            color: white;
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(138, 43, 226, 0.3);
+        }
+
+        .chat-input-row input {
+            flex: 1;
+            padding: 18px 25px;
+            border: 2px solid rgba(138, 43, 226, 0.2);
+            border-radius: 15px;
+            font-size: 16px;
+            transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+        }
+
+        .chat-input-row input:focus {
+            outline: none;
+            border-color: rgba(138, 43, 226, 0.5);
+            background: rgba(255, 255, 255, 0.95);
+            box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.1);
+        }
+
+        .chat-submit-btn {
+            background: linear-gradient(135deg, #8a2be2 0%, #4b0082 100%);
+            color: white;
+            border: none;
+            padding: 18px 35px;
+            border-radius: 15px;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            box-shadow: 0 8px 25px rgba(138, 43, 226, 0.3);
+        }
+
+        .chat-submit-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 12px 35px rgba(138, 43, 226, 0.4);
+        }
+
+        .chat-features {
+            display: flex;
+            gap: 20px;
+            color: #666;
+            font-size: 0.9rem;
+            align-items: center;
+        }
+
+        .chat-feature {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        /* Responsive - Stack on mobile */
+        @media (max-width: 1200px) {
+            .analysis-tabs {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .analysis-tabs {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* Animated background pattern overlay for cards */
         .tab-card::before {
             content: '';
             position: absolute;
             top: 0;
             left: 0;
             right: 0;
-            height: 4px;
-            background: linear-gradient(90deg, rgba(255,255,255,0.3), rgba(255,255,255,0.1));
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="20" cy="20" r="2" fill="rgba(255,255,255,0.1)"/><circle cx="50" cy="30" r="1.5" fill="rgba(255,255,255,0.1)"/><circle cx="80" cy="25" r="2.5" fill="rgba(255,255,255,0.1)"/><circle cx="30" cy="60" r="1" fill="rgba(255,255,255,0.1)"/><circle cx="70" cy="70" r="2" fill="rgba(255,255,255,0.1)"/><circle cx="15" cy="80" r="1.5" fill="rgba(255,255,255,0.1)"/></svg>');
+            background-size: 100px 100px;
+            animation: float 20s ease-in-out infinite;
+            opacity: 0.5;
+            pointer-events: none;
         }
 
         .tab-card:hover::before {
-            transform: scaleX(1);
+            animation-duration: 10s;
+            opacity: 0.7;
         }
 
         .tab-card:hover {
