--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         }
 
         .chat-body {
-            padding: 35px;
+            padding: 40px;
             position: relative;
             z-index: 2;
             background: rgba(255, 255, 255, 0.8);
@@ -539,55 +539,73 @@
 
         .chat-input-container {
             position: relative;
-            margin-bottom: 25px;
+            margin-bottom: 30px;
         }
 
         .chat-textarea {
             width: 100%;
-            min-height: 120px;
+            min-height: 140px;
             border: 2px solid rgba(138, 43, 226, 0.2);
             border-radius: 20px;
-            padding: 25px;
+            padding: 30px 25px 25px 25px;
             font-size: 16px;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-weight: 400;
+            line-height: 1.5;
             resize: vertical;
             transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             position: relative;
             box-shadow: 0 5px 20px rgba(138, 43, 226, 0.1);
+            color: #333;
+        }
+
+        .chat-textarea::placeholder {
+            color: #888;
+            font-weight: 400;
         }
 
         .chat-textarea:focus {
             outline: none;
             border-color: rgba(138, 43, 226, 0.5);
-            background: rgba(255, 255, 255, 0.95);
+            background: white;
             box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.1);
             transform: translateY(-2px);
         }
 
         .chat-textarea-label {
             position: absolute;
-            top: -12px;
+            top: -15px;
             left: 20px;
             background: linear-gradient(135deg, #8a2be2, #4b0082);
             color: white;
-            padding: 8px 15px;
+            padding: 10px 20px;
             font-weight: 600;
-            font-size: 0.9rem;
-            border-radius: 20px;
-            box-shadow: 0 3px 10px rgba(138, 43, 226, 0.3);
+            font-size: 0.95rem;
+            border-radius: 25px;
+            box-shadow: 0 4px 15px rgba(138, 43, 226, 0.3);
+            z-index: 10;
+        }
+
+        .chat-suggestions {
+            display: flex;
+            gap: 12px;
+            margin-bottom: 30px;
+            flex-wrap: wrap;
         }
 
         .suggestion-chip {
-            background: linear-gradient(135deg, rgba(138, 43, 226, 0.1), rgba(75, 0, 130, 0.1));
+            background: linear-gradient(135deg, rgba(138, 43, 226, 0.08), rgba(75, 0, 130, 0.08));
             border: 2px solid rgba(138, 43, 226, 0.2);
-            padding: 10px 18px;
-            border-radius: 25px;
+            padding: 12px 20px;
+            border-radius: 30px;
             font-size: 0.9rem;
             cursor: pointer;
             transition: all 0.3s ease;
             color: #8a2be2;
             font-weight: 500;
+            white-space: nowrap;
         }
 
         .suggestion-chip:hover {
@@ -597,30 +615,51 @@
             box-shadow: 0 8px 20px rgba(138, 43, 226, 0.3);
         }
 
+        .chat-input-row {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 35px;
+        }
+
         .chat-input-row input {
             flex: 1;
-            padding: 18px 25px;
+            padding: 20px 25px;
             border: 2px solid rgba(138, 43, 226, 0.2);
-            border-radius: 15px;
+            border-radius: 18px;
             font-size: 16px;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-weight: 400;
             transition: all 0.3s ease;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
+            color: #333;
+        }
+
+        .chat-input-row input::placeholder {
+            color: #888;
+            font-weight: 400;
         }
 
         .chat-input-row input:focus {
             outline: none;
             border-color: rgba(138, 43, 226, 0.5);
-            background: rgba(255, 255, 255, 0.95);
+            background: white;
             box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.1);
+        }
+
+        .chat-submit-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 25px;
         }
 
         .chat-submit-btn {
             background: linear-gradient(135deg, #8a2be2 0%, #4b0082 100%);
             color: white;
             border: none;
-            padding: 18px 35px;
-            border-radius: 15px;
+            padding: 20px 40px;
+            border-radius: 18px;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
@@ -629,6 +668,8 @@
             align-items: center;
             gap: 12px;
             box-shadow: 0 8px 25px rgba(138, 43, 226, 0.3);
+            min-width: 160px;
+            justify-content: center;
         }
 
         .chat-submit-btn:hover {
@@ -638,16 +679,22 @@
 
         .chat-features {
             display: flex;
-            gap: 20px;
+            gap: 25px;
             color: #666;
             font-size: 0.9rem;
             align-items: center;
+            flex-wrap: wrap;
         }
 
         .chat-feature {
             display: flex;
             align-items: center;
             gap: 8px;
+            font-weight: 500;
+        }
+
+        .chat-feature i {
+            font-size: 1.1rem;
         }
 
         /* Responsive - Stack on mobile */
