--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                             <form @submit.prevent="analyzeSocial()">
                                 <div style="position: relative; margin-bottom: 30px;">
                                     <div class="chat-textarea-label">What topic should we scan for?</div>
-                                    <input type="text" class="chat-textarea" style="min-height: auto; padding: 20px;" 
+                                    <input type="text" class="chat-input" 
                                            x-model="forms.social.query" 
                                            placeholder="e.g., Tesla Model 3, iPhone 15, climate change" required>
                                 </div>
