--- a/index.html
+++ b/index.html
@@ -1183,6 +1183,16 @@
             </div>
 
             <div x-show="results && !loading" class="results-container">
+                <div class="results-header" style="display: flex; justify-content: space-between; align-items: center;">
+                    <div style="display: flex; align-items: center; gap: 15px;">
+                        <i class="fas fa-chart-bar"></i>
+                        <h3>Analysis Results</h3>
+                    </div>
+                    <button @click="exportToPDF()" class="btn btn-primary" style="font-size: 14px; padding: 12px 20px;">
+                        <i class="fas fa-file-pdf"></i>
+                        Export to PDF
+                    </button>
+                </div>
                 <div class="results-header">
                     <i class="fas fa-chart-bar"></i>
                     <h3>Analysis Results</h3>
