--- a/index.html
+++ b/index.html
@@ -1193,10 +1193,10 @@
                         Export to PDF
                     </button>
                 </div>
-                <div class="results-header">
-                    <i class="fas fa-chart-bar"></i>
-                    <h3>Analysis Results</h3>
-                </div>
+               # <div class="results-header">
+                   # <i class="fas fa-chart-bar"></i>
+                   # <h3>Analysis Results</h3>
+                #</div>
                 
                 <template x-if="results.summary">
                     <div class="insight-card">
