--- a/index.html
+++ b/index.html
@@ -837,37 +837,29 @@
                 </form>
                 <p style="text-align: center; margin-top: 25px;">
                     Don't have an account? 
-                    <a href="#" @click="authMode = 'signup'" style="color: #8a2be2; text-decoration: none;">Create Account</a>
+                    <a href="/signup" style="color: #8a2be2; text-decoration: none;">Create Account</a>
                 </p>
             </div>
 
             <div x-show="authMode === 'signup'">
                 <div class="auth-header">
                     <h2><i class="fas fa-user-plus"></i> Create Account</h2>
-                    <p>Join marketers, founders, and creators using our AI platform</p>
+                    <p>Choose your plan and start analyzing market trends</p>
                 </div>
-                <form @submit.prevent="signup()">
-                    <div class="form-group">
-                        <label for="signup-email">Email Address</label>
-                        <input type="email" id="signup-email" class="form-control" x-model="credentials.email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="signup-password">Password</label>
-                        <input type="password" id="signup-password" class="form-control" x-model="credentials.password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;" :disabled="loading">
-                        <i class="fas fa-user-plus"></i>
-                        <span x-text="loading ? 'Creating Account...' : 'Create Account'"></span>
-                    </button>
-                </form>
+                
+                <div style="text-align: center; padding: 20px;">
+                    <p style="margin-bottom: 20px; color: #666;">Select from our flexible subscription plans</p>
+                    <a href="/signup" class="btn btn-primary" style="display: inline-block; padding: 15px 40px; width: 100%; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border-radius: 10px; text-decoration: none; font-weight: 600; border: none;">
+                        <i class="fas fa-arrow-right"></i> Choose Your Plan
+                    </a>
+                </div>
+                
                 <p style="text-align: center; margin-top: 25px;">
                     Already have an account? 
                     <a href="#" @click="authMode = 'login'" style="color: #8a2be2; text-decoration: none;">Sign In</a>
                 </p>
             </div>
-
             <div x-show="message" :class="'message ' + messageType" x-text="message"></div>
-        </div>
 
         <div x-show="isAuthenticated" class="main-app">
             <div class="user-dashboard">
