--- a/signup.html
+++ b/signup.html
@@ -526,7 +526,7 @@
             </form>
 
             <div class="signin-link">
-                Already have an account? <a href="/signin">Sign In</a>
+                Already have an account? <a href="/index">Sign In</a>
             </div>
         </div>
     </div>
