--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
                     this.message = '';
 
                     try {
-                        const response = await fetch(`${this.apiBase}/api/auth/login`, {
+                        const response = await fetch(`${this.apiBase}/api/login`, {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             body: JSON.stringify(this.credentials)
