--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
                 async validateSession() {
                     console.log('Validating session...');
                     try {
-                        const response = await fetch(`${this.apiBase}/api/auth/validate`, {
+                        const response = await fetch(`${this.apiBase}/api/validate`, {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             body: JSON.stringify({ session_id: this.sessionId })
@@ -1330,7 +1330,7 @@
                     this.message = '';
 
                     try {
-                        const response = await fetch(`${this.apiBase}/api/auth/signup`, {
+                        const response = await fetch(`${this.apiBase}/api/signup`, {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             credentials: 'include',
@@ -1358,7 +1358,7 @@
 
                 async logout() {
                     try {
-                        await fetch(`${this.apiBase}/api/auth/logout`, {
+                        await fetch(`${this.apiBase}/api/logout`, {
                             method: 'POST',
                             headers: { 'Content-Type': 'application/json' },
                             body: JSON.stringify({ session_id: this.sessionId })
