--- a/index.html
+++ b/index.html
@@ -878,19 +878,19 @@
                 <form @submit.prevent="signup()">
                     <div class="form-group">
                         <label for="signup-name">Full Name</label>
-                        <input type="text" id="signup-name" class="form-control" x-model="signupData.fullName" required>
+                        <input type="text" id="signup-name" class="form-control" x-model="credentials.fullName" required>
                     </div>
                     <div class="form-group">
                         <label for="signup-email">Email Address</label>
-                        <input type="email" id="signup-email" class="form-control" x-model="signupData.email" required>
+                        <input type="email" id="signup-email" class="form-control" x-model="credentials.email" required>
                     </div>
                     <div class="form-group">
                         <label for="signup-password">Password</label>
-                        <input type="password" id="signup-password" class="form-control" x-model="signupData.password" required>
+                        <input type="password" id="signup-password" class="form-control" x-model="credentials.password" required>
                     </div>
                     <div class="form-group">
                         <label for="signup-plan">Select Plan</label>
-                        <select id="signup-plan" class="form-control" x-model="signupData.plan" required>
+                        <select id="signup-plan" class="form-control" x-model="credentials.plan" required>
                             <option value="">Choose a plan...</option>
                             <option value="free">Free Plan (Limited features)</option>
                             <option value="basic">Basic - $9.99/month</option>
